# takepoint

./: Cargo.toml
src/: client.rs  server.rs
