[package]
name = "takepoint"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
wireguard-control = "1.5.0"
structopt = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = {version = "2.2"}